--- a/public/index.html
+++ b/public/index.html
@@ -50,4 +50,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://kit.fontawesome.com/8c0fa91cf8.js" crossorigin="anonymous"></script>
 </html>
