--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="../src/index.css">
     <title>Marine Park</title>
   </head>
-  <body style="background-color: #1D4E88">
+  <body style="background-color: #122F66">
     <div>
       <a href="https://walink.co/b8f22b" class="text-reset btn-wsp" target="_blank">
           <i>
